--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-gray-50 min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
